2001-05-25  Jeff Freedman  <jeff@amy.nerble.net>

	* Ucmachine.cc: Just warn on stack underflow.
	* Actions.cc:  Center view if teleporting Avatar, and watch for
	Sequence action being deleted.
	So, except for Avatar being too dumb to open doors, trial seems
	to work.

2001-05-23  Ryan Nunn <triforce@merlin.net.au>
	* audio/Audio.cc: Put #ifdef ENABLE_MIDISFX around MIDI SFX code to
	  disable MIDI sfx's. Simply defining ENABLE_MIDISFX will re-enable
	  MIDI SFX.

2001-05-21  Jeff Freedman  <jeff@amy.nerble.net>

	* Rewrote intrinsic si_path_run_usecode() so it now schedules the
	actions.  Fixes double-conversation in Knight's banquet, and
	likely fixes and/or breaks lots of other things.

2001-05-19  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc: fixed "emerging Guardian" part in intro

2001-05-19  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* keyactions.cc: fixed typo breaking UseItem

2001-05-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keyactions.cc, gamewin.*: you can now specify a framenum and quality
	for the 'useitem' action
	* server.cc: define PF_LOCAL in Solaris
	* credits.txt: added Joseph Morris

2001-05-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Exult is much more liberal about what you can take or move.
	* Fixed crash during resurrection.

2001-05-17  Tristan Tarrant  <nadir@users.sourceforge.net>

	* sigame.cc: allow splash screen to be interrupted
	* gamewin.cc, audio/Audio.cc, audio/Mixer.cc, 
	  audio/midi_drivers/Timidity_binary.cc, actors.cc,
	  schedule.cc:
	  be verbose only when compiled with debugging
	* tools/.cvsignore: Add splitshp

2001-05-17  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Added support for the 'protected' halo button and the
	'protect' combat mode.
	* actors.h: In SI Knight's Test, the Usecode for the invisible
	pikeman stops repeating when you kill him.
	* animate.cc:  Fixed body parts animation on Erstam's island.
	
2001-05-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>