@@ -546,7 +546,7 @@ void Talk_schedule::now_what
 		npc->walk_to_tile(npc->get_abs_tile_coord() +
 			Tile_coord(dx, -dx, 0), 300, 500);
 					// Wait til conversation is over.
-		if (gwin->get_usecode()->get_num_faces_on_screen() == 0)
+//		if (gwin->get_usecode()->get_num_faces_on_screen() == 0)
 //			phase++;
 			phase = 3;
 		return;
