@@ -1,3 +1,8 @@
+2001-05-26  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Code cleanup:  Several 'modes' removed, along with the 'filter'
+	in exult.cc.
+
 2001-05-25  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Ucmachine.cc: Just warn on stack underflow.
